--- a/projet/client/stylesheets/main.css
+++ b/projet/client/stylesheets/main.css
@@ -5,17 +5,29 @@
 }*/
 
 body {
-  background-color: #A0A0A0;
+  background-color: #6ae2f1;
   text-align:center;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 #conteneur {
-  background-color: white;
+  background-color: rgb(250, 214, 135);
   width: 45em;
   height: auto;
   margin: auto; /* pour centrer le conteneur */
   text-align: left;
   border: 2px solid green;
-  padding: 1em 2em;
+  padding: 1em 1em;
   font-family: Verdana, Arial, serif;
+  align-items: center;
+}
+
+#banner{
+  color: white;
+  font-size: 50pt;
+}
+
+td{
+  text-align:center;
+  padding: 0em 2em;
 }
